.apex/unpackaged/objects/Song__c.object
<CustomObject>
    <description>An instance of a song.</description>
    <fields>
        <fullName>Artist__c</fullName>
        <description>Name of the artist.</description>
        <label>Artist</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Genre__c</fullName>
        <description>Genre of the song.</description>
        <label>Genre</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Country</fullName>
                </value>
                <value>
                    <fullName>Electronic</fullName>
                </value>
                <value>
                    <fullName>Folk</fullName>
                </value>
                <value>
                    <fullName>Hip hop</fullName>
                </value>
                <value>
                    <fullName>Indy</fullName>
                </value>
                <value>
                    <fullName>Jazz</fullName>
                </value>
                <value>
                    <fullName>Latin</fullName>
                </value>
                <value>
                    <fullName>Pop</fullName>
                </value>
                <value>
                    <fullName>Rap</fullName>
                </value>
                <value>
                    <fullName>Rock</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Length_m__c</fullName>
        <description>Length of the song in minutes.</description>
        <label>Length</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Track_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of times a song is used as a track.</description>
        <label>Track Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Track_Licenses__c</fullName>
        <label>Track Licenses</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Song</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Song Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Songs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>LicensesValidationRule</fullName>
        <active>true</active>
        <description>Ensures the track count never exceeds the number of available track licenses.</description>
        <errorConditionFormula>Track_Count__c &gt; Track_Licenses__c</errorConditionFormula>
        <errorDisplayField>Track_Licenses__c</errorDisplayField>
        <errorMessage>You&apos;ve exeeded the limits of using that song.</errorMessage>
    </validationRules>
</CustomObject>